src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Assigned_Queue__c</fullName>
        <label>Assigned Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Customer_Number__c</fullName>
        <label>Company Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Industrial Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial OEM - Direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_plant_shutdown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer plant shutdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Populated_when_stage_changes__c</fullName>
        <description>The field is used to populate the date when the stage is changed. Is used for reporting</description>
        <label>Date Populated when stage changes</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Taken_to_Close__c</fullName>
        <formula>ClosedDate -  CreatedDate</formula>
        <label>Days Taken to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engineering_Assistance_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Assistance Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <label>Issue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_RGA_Number__c</fullName>
        <label>PO/RGA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevents_billling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevents billling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevents_order_shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevents order shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Brand__c</fullName>
        <label>Product Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exact Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Deere Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Concrete Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Screed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_schedule_delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project schedule delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QCBD_Case_Number__c</fullName>
        <label>QCBD Case Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stuck_Case_Duration__c</fullName>
        <formula>NOW() -  Date_Populated_when_stage_changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stuck Case Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Territory_Employee_Id__c</fullName>
        <label>Territory Employee Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_Application_Data_Sheet_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Application Data Sheet Submitted?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Support Incidents</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_High_Priority_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Customer_plant_shutdown__c</columns>
        <columns>Prevents_billling__c</columns>
        <columns>Prevents_order_shipping__c</columns>
        <columns>Project_schedule_delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>High</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Closed</value>
        </filters>
        <label>All Open High Priority Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Medium_Priority_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Customer_plant_shutdown__c</columns>
        <columns>Prevents_billling__c</columns>
        <columns>Prevents_order_shipping__c</columns>
        <columns>Project_schedule_delay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.PRIORITY</field>
            <operation>equals</operation>
            <value>Medium</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Resolved,Closed</value>
        </filters>
        <label>All Open Medium Priority Cases</label>
    </listViews>
    <listViews>
        <fullName>Cases_that_have_PO_RGA_Numbers</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>PO_RGA_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PO_RGA_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cases that have PO/RGA Numbers</label>
    </listViews>
    <listViews>
        <fullName>Cases_that_have_QCBD_Case_Numbers</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>QCBD_Case_Number__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QCBD_Case_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Cases that have QCBD Case Numbers</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Cases</label>
    </listViews>
</CustomObject>